revamp colors and generate sidebar by script

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,8 +1,8 @@
-<ul>
+<ul class='section'>
+<a class='administrators' href='/administrators' id='sidebar-section-administrators'>Administrators</a>
 <li class='nav-item'>
-<a class='administrators' id='sidebar-section-administrators'>administrators</a>
-<ul>
-<a class='essentials' id='sidebar-subsection-essentials'>essentials</a>
+<a class='essentials' href='/administrators#essentials' id='sidebar-subsection-essentials'>Essentials</a>
+<ul class='subsection hide'>
 <li class='nav-item'>
 <a href='/administrators-essentials' title='Administrators Essentials'>Administrators Essentials</a>
 </li>
@@ -43,8 +43,8 @@
 <a href='/use-one-fastmail-account-to-serve-multiple-discourse-instances' title='Use one Fastmail account to serve multiple Discourse instances'>Use one Fastmail account to serve multiple Discourse instances</a>
 </li>
 </ul>
-<ul>
-<a class='logins' id='sidebar-subsection-logins'>logins</a>
+<a class='logins' href='/administrators#logins' id='sidebar-subsection-logins'>Logins</a>
+<ul class='subsection hide'>
 <li class='nav-item'>
 <a href='/administrators-logins' title='Administrators Logins'>Administrators Logins</a>
 </li>
@@ -65,10 +65,10 @@
 </li>
 </ul>
 </li>
+<a class='designers' href='/designers' id='sidebar-section-designers'>Designers</a>
 <li class='nav-item'>
-<a class='designers' id='sidebar-section-designers'>designers</a>
-<ul>
-<a class='tweaks' id='sidebar-subsection-tweaks'>tweaks</a>
+<a class='tweaks' href='/designers#tweaks' id='sidebar-subsection-tweaks'>Tweaks</a>
+<ul class='subsection hide'>
 <li class='nav-item'>
 <a href='/adding-a-menu-item-to-the-hamburger-menu' title='Adding a menu item to the Hamburger menu'>Adding a menu item to the Hamburger menu</a>
 </li>
