--- a/_sass/variables.scss
+++ b/_sass/variables.scss
@@ -1,20 +1,20 @@
 $portal-users-main-bg-color: #3AB54A !default;
 $portal-moderators-main-bg-color: #25AAE2 !default;
-$portal-administrators-main-bg-color: #0E76BD !default;
+$portal-administrators-main-bg-color: #F1592A !default;
 $portal-designers-main-bg-color: #92278F !default;
 $portal-sysadmins-main-bg-color: #283890 !default;
 $portal-developers-main-bg-color: #231F20 !default;
 
 $portal-users-musthead-color: #70D67C !default;
 $portal-moderators-musthead-color: #75CFF5 !default;
-$portal-administrators-musthead-color: #4BABEA !default;
+$portal-administrators-musthead-color: #EFAB96 !default;
 $portal-designers-musthead-color: #E484E1 !default;
 $portal-sysadmins-musthead-color: #6178F5 !default;
-$portal-developers-musthead-color: #8A8A8A !default;
+$portal-developers-musthead-color: #ADADAD !default;
 
 $portal-users-anchor-color: #32903E !default;
 $portal-moderators-anchor-color: #40778E !default;
-$portal-administrators-anchor-color: #045F9A !default;
+$portal-administrators-anchor-color: #D65A33 !default;
 $portal-designers-anchor-color: #9C3399 !default;
 $portal-sysadmins-anchor-color: #31408E !default;
 $portal-developers-anchor-color: #695D5D !default;
