--- a/_sass/sidebar.scss
+++ b/_sass/sidebar.scss
@@ -9,12 +9,14 @@
 
 .sidebar ul {
   list-style-type: none;
+  margin: 0;
   padding: 0;
 }
 
 .nav-item {
   margin: 8px 0 0;
   position: relative;
+  font-size: 13px;
 }
 
 /* Sidebar content */
