--- a/_sass/portal.scss
+++ b/_sass/portal.scss
@@ -37,6 +37,10 @@
 }
 
 /* General portal page */
+.portal-page {
+  float: left;
+}
+
 .portal-header {
   padding: $content-padding;
   color: #fff;
