--- a/tools/sidebar.haml
+++ b/tools/sidebar.haml
@@ -3,12 +3,14 @@
     %a(id="sidebar-section-#{section_name}"
        class="#{section_name}"
        href="/#{section_name}")= section_name.capitalize
-    %li.nav-item
-      - subsections.each do |subsection_name, _|
+    - subsections.each do |subsection_name, _|
+      %li.nav-item
         %a(id="sidebar-subsection-#{subsection_name}"
            class="#{subsection_name}"
            href="/#{section_name}##{subsection_name}")= subsection_name.capitalize
+        != "{% if section == '#{section_name}' and subsection == '#{subsection_name}' %}"
         %ul.subsection.hide
           - info[section_name][subsection_name].each do |meta|
             %li.nav-item
               %a(href="/#{meta[:name]}" title=meta[:title])= meta[:title]
+        {% endif %}
